--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <span></span>
         <span></span>
       </div>
-      <div class="menu-links">
-        <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
-        <li><a href="profile.html" onclick=toggleMenu()">Profile</a></li>
-        <li><a href="project.html" onclick="toggleMenu()">Projects</a></li>
-        <li><a href="contact.html" onclick="toggleMenu()">Contact</a></li>
-      </div>
+      <ul class="menu-links">
+     <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
+     <li><a href="profile.html" onclick="toggleMenu()">Profile</a></li>
+     <li><a href="project.html" onclick="toggleMenu()">Projects</a></li>
+     <li><a href="contact.html" onclick="toggleMenu()">Contact</a></li>
+   </ul>
     </div>
   </nav>
 
